Refresh of core code (#1)
* Refresh of core code
* Upgrade to Java 21 and Spring Boot 3.2
* Refresh Gatling to use Java DSL and Maven plugin
* Added Karate tests and customised the report
* Removed Lombok
* Refactored Gatling tests to a new project
* Refactored debit-credit REST interface
* Updated REST URLs to better follow the standard
* Change TransactionDirection to TransactionType and variable name to 'type'
* Implemented performance tests in its own project to avoid dependency availability issues on restricted Maven repositories
* Removed the need for generated request JSON from CSV input files
* Rolled back Gatling version bump as Content-Type negotiation failed with version 3.10.0 but works in 3.9.5
* Updates after testing on other environments
* Added BID sequence creation
* Improve reporting from Karate tests
* Updated Gatling version now that their content-type bug is fixed
* Update README.md to remove duplication of the performance tests block