@@ -1,6 +1,7 @@
 package zarg.debitcredit.controllers;
 
-import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.MediaType;
 import org.springframework.util.Assert;
@@ -17,15 +18,15 @@ import zarg.debitcredit.service.TellerService;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
-import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/teller")
-@Slf4j
 class TellerController {
+
+    private final Logger log = LoggerFactory.getLogger(this.getClass());
 
     private static final String DATE_TIME_FORMAT = "yyyy-MM-dd'T'HH:mm:ss.SSS";
 
@@ -35,56 +36,56 @@ class TellerController {
         this.teller = teller;
     }
 
-    @GetMapping(value = "/{customerId}/{accountId}/balance")
+    @GetMapping(value = "/{customerId}/{accountId}",
+            produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
-    public BalanceDetails balance(@PathVariable("customerId") String customerId, @PathVariable("accountId") String accountBid) {
-        log.debug("Requesting balance for account {}", accountBid);
-        return new BalanceDetails(accountBid, teller.balance(customerId, accountBid));
+    public BalanceDetails balance(@PathVariable("customerId") String customerBid,
+                                  @PathVariable("accountId") String accountBid) {
+        log.debug("Requesting balance by {} for account {}", customerBid, accountBid);
+        return new BalanceDetails(accountBid, teller.balance(customerBid, accountBid));
     }
 
-    @PutMapping(value = "/{customerId}/credit")
+    @PutMapping(value = "/{customerId}/{accountId}",
+            consumes = MediaType.APPLICATION_JSON_VALUE,
+            produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
-    public TransactionDetails credit(@PathVariable("customerId") String customerId, @RequestBody CreditAccountRequest request) {
-        log.debug("Requesting {} credit to account {}", request.getAmount(), request.getAccountId());
-        validateAmount(request.getAmount());
+    public TransactionDetails tellerTransaction(@PathVariable("customerId") String customerBid,
+                                                @PathVariable("accountId") String accountBid,
+                                                @RequestBody TellerRequest request) {
+        log.debug("Requesting {} {} by {} from account {}", request.type(),
+                request.amount(), customerBid, accountBid);
+        validateAmount(request.amount());
 
-        return new TransactionDetails(teller.credit(customerId, request.getAccountId(), request.getAmount()));
-    }
-
-    @PutMapping(value = "/{customerId}/{accountId}/debit")
-    @ResponseBody
-    public TransactionDetails debit(@PathVariable("customerId") String customerId,
-                                    @PathVariable("accountId") String accountId,
-                                    @RequestBody DebitAccountRequest request) {
-        log.debug("Requesting {} debit from account {}", request.getAmount(), accountId);
-        validateAmount(request.getAmount());
-
-        return new TransactionDetails(teller.debit(customerId, accountId, request.getAmount()));
+        return new TransactionDetails(switch (request.type()) {
+            case DEBIT -> teller.debit(customerBid, accountBid, request.amount());
+            case CREDIT -> teller.credit(customerBid, accountBid, request.amount());
+        });
     }
 
     @GetMapping(value = "/{customerId}/transactions", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
-    public Map<String, List<TransactionDetails>> transactions(@PathVariable("customerId") String customerId,
-                                                              @RequestParam(name = "from", required = false) @DateTimeFormat(pattern = DATE_TIME_FORMAT) LocalDateTime from,
-                                                              @RequestParam(name = "to", required = false) @DateTimeFormat(pattern = DATE_TIME_FORMAT) LocalDateTime to) {
+    public Map<String, List<TransactionDetails>> transactionHistory(
+            @PathVariable("customerId") String customerBid,
+            @RequestParam(name = "from", required = false) @DateTimeFormat(pattern = DATE_TIME_FORMAT) LocalDateTime from,
+            @RequestParam(name = "to", required = false) @DateTimeFormat(pattern = DATE_TIME_FORMAT) LocalDateTime to) {
 
         if (from == null) {
-            from = LocalDateTime.now(ZoneOffset.UTC).minus(1, ChronoUnit.DAYS);
+            from = LocalDateTime.now(ZoneOffset.UTC).minusDays(1);
         }
 
         if (to == null) {
             to = LocalDateTime.now(ZoneOffset.UTC);
         }
 
-        log.info("Finding transactions for {} from {}, to {}", customerId, from, to);
+        log.info("Finding transactions for {} from {}, to {}", customerBid, from, to);
 
-        return teller.findTransactions(customerId, from, to)
+        return teller.findTransactions(customerBid, from, to)
                 .entrySet().stream()
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
                         e -> e.getValue().stream()
                                 .map(TransactionDetails::new)
-                                .collect(Collectors.toList())));
+                                .toList()));
     }
 
     private void validateAmount(BigDecimal amount) {
